<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NoteZi</string>

    <!-- REMEMBER TO CHANGE THE VERSION -->
    <string name="AppVersion">Application Version ⓘ 0.23</string>

    <!--Temporary Placeholders-->
    <string name="User">User</string>
    <string name="Email">Email</string>
    <string name="schoolID">School ID</string>
    <string name="Time">Nov 22 2023</string>
    <string name="taskNumber">100</string>

    <!--Main Placeholders (HOME PAGE)-->
    <string name="Hello">Hello,</string>
    <string name="YouHave">You have</string>
    <string name="TasksToday">Tasks Today</string>
    <string name="Courses">Courses</string>
    <string name="RunningSubs">Your Running Courses</string>
    <string name="Schedule">Schedule</string>
    <string name="ScheduleSubs">Your Upcoming Class Schedule</string>

    <string name="NoSchedName">NO SCHEDULE FOR TODAY!</string>
    <string name="NoSchedProf">⊹⋛⋋( ՞ਊ ՞)⋌⋚⊹</string>
    <string name="NoSchedTime">(づ ◕‿◕ )づ</string>
    <string name="NoSchedDay">( ˘▽˘)っ♨</string>
    <string name="NoSchedLink">( ͡° ͜ʖ ͡° )</string>





    <!--Main Placeholders (TASK/COURSE PAGE)-->
    <string name="Today">Today</string>
    <string name="Search">Search</string>

    <string name="AddTaskName">Add A Task</string>
    <string name="AddTaskCourse">Course Name</string>
    <string name="AddTask">Task Name</string>
    <string name="TaskDeadline">Task Deadline</string>
    <string name="TaskLink">Task Link</string>


    <!--Main Placeholders (SCHEDULE PAGE)-->
    <string name="AddSched">Add Schedule</string>
    <string name="AddSchedName">Name of Subject</string>
    <string name="ProfName">Name of Professor</string>
    <string name="TimeSubj">Time of Subject</string>
    <string name="DaySubj">Day of Subject</string>
    <string name="LinkSubj">Subject Link</string>

    <!--Main Placeholders (PROFILE PAGE)-->
    <string name="SaveChanges">Save Changes</string>
    <string name="ChooseFile">Choose File</string>
    <string name="ProfilePicture">Profile Picture:</string>
    <string name="UserName">User Name:</string>
    <string name="UserEmail">Email:</string>
    <string name="UserSchoolID">School ID:</string>

    <string name="ProfilePictureText">Profile Picture</string>
    <string name="UserNameText">User Name</string>
    <string name="UserEmailText">Email</string>
    <string name="UserSchoolIDText">School ID</string>

    <!--Main Placeholders (SETTINGS PAGE)-->
    <string name="userSettings">User Settings</string>
    <string name="EditUserProfile">Edit Profile</string>
    <string name="SettingsVersion">Application Version</string>
    <string name="SettingsAbout">About</string>

    <!--Main Placeholders (SETTINGS PAGE)-->
    <string name="AboutNoteZi">NoteZi is a Study Planner that is an app designed to help students organize their study schedules, set goals, and track their academic progress. Created by John Louie Ubias, Miguel Pilapil, and Rotsen David</string>
</resources>