<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteColorTEXT"
    >


    <TextView
        android:id="@+id/AddSceduleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackColorBG"
        android:fontFamily="@font/blackersansbold"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/AddSched"
        android:textColor="#EEF5FF"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/NameofSubj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackersansregular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/AddSchedName"
        android:textColor="@color/blackColorBG"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_subj_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#22092C"
        android:ems="10"
        android:fontFamily="@font/blackersansregular"
        android:hint="@string/AddSchedName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/blackColorBG"
        android:textColorHint="@color/blackColorBG"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/NameofProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackersansregular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/ProfName"
        android:textColor="@color/blackColorBG"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_subj_prof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#22092C"
        android:ems="10"
        android:fontFamily="@font/blackersansregular"
        android:hint="@string/ProfName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/blackColorBG"
        android:textColorHint="@color/blackColorBG"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextFields,VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/TimeofSubj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackersansregular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/TimeSubj"
        android:textColor="@color/blackColorBG"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_subj_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#22092C"
        android:ems="10"
        android:fontFamily="@font/blackersansregular"
        android:hint="@string/TimeSubj"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/blackColorBG"
        android:textColorHint="@color/blackColorBG"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/LinkofSubj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackersansregular"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:text="@string/LinkSubj"
        android:textColor="@color/blackColorBG"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_subj_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#22092C"
        android:ems="10"
        android:fontFamily="@font/blackersansregular"
        android:hint="@string/LinkSubj"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/blackColorBG"
        android:textColorHint="@color/blackColorBG"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_id_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/redColorBUTTONS"
        android:text="@string/SaveChanges"
        android:textColor="@color/whiteColorTEXT"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:fontFamily="@font/altonebold"
        tools:ignore="VisualLintButtonSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

</LinearLayout>